--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.5.3",
     "bulma": "^0.9.1",
     "jquery": "^3.5.1",
+    "mdbootstrap": "^4.19.2",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
