--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "~10.1.3",
+    "@angular/cdk": "^11.1.1",
     "@angular/common": "~10.1.3",
     "@angular/compiler": "~10.1.3",
     "@angular/core": "~10.1.3",
@@ -24,6 +25,7 @@
     "ag-grid-community": "^24.1.0",
     "bootstrap": "^4.5.3",
     "bulma": "^0.9.1",
+    "chart.js": "^2.9.4",
     "jquery": "^3.5.1",
     "mdbootstrap": "^4.19.2",
     "popper.js": "^1.16.1",
